@@ -11,13 +11,23 @@
     <version>0.0.4-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
         <maven.test.skip>true</maven.test.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>15</version>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -45,7 +55,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.46</version>
+            <version>1.2.75</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -57,18 +67,53 @@
 
     <build>
         <plugins>
+            <!--
+            运行方式：执行 mvn javafx:run
+            运行说明：因为很多开发人员电脑上多个JRE并存，默认PATH下的JRE版本不一定是15，
+            因此请先设置环境变量JDK_15_HOME指向JDK15的目录。
+             -->
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.5</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.hyd.pass.App</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <mainClass>com.hyd.pass.AppMain</mainClass>
+                    <executable>${env.JDK_15_HOME}/bin/java.exe</executable>
                 </configuration>
+            </plugin>
+
+            <!--
+            在 JDK15 环境中直接执行 mvn package 即可打包成附带 JRE 的 exe 可执行文件
+            -->
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.4.2</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <!-- 需要查看控制台输出的话再打开下面这个配置 -->
+                            <!--
+                            <winConfig>
+                              <headerType>console</headerType>
+                            </winConfig>
+                            -->
+                            <name>hydrogen-pass</name>
+                            <vmArgs>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</vmArgs>
+                            <displayName>hydrogen-pass</displayName>
+                            <jrePath>${env.JDK_15_HOME}</jrePath>
+                            <mainClass>com.hyd.pass.AppMain</mainClass>
+                            <bundleJre>true</bundleJre>
+                            <generateInstaller>false</generateInstaller>
+                            <administratorRequired>false</administratorRequired>
+                            <platform>auto</platform>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
